edition = "2023";

import "google/protobuf/empty.proto";

package gophkeeper;

option go_package = "gophkeeper/gen;gophkeeper";

// Entity

enum DataType {
  LOGIN = 0;
  NOTE = 1;
  BINARY = 2;
  CARD = 3;
}

message DataWrapper {
  oneof data {
    Login login = 1;
    Note note = 2;
    Binary binary = 3;
    Card card = 4;
  }
}

message Login {
  string name = 1;
  string login = 2;
  string password = 3;
  map<string, string> metadata = 4;
}

message Note {
  string name = 1;
  string text = 2;
  map<string, string> metadata = 3;
}

message Binary {
  string name = 1;
  bytes data = 2;
  string file_name = 3;
  map<string, string> metadata = 4;
}

message Card {
  string name = 1;
  string number = 2;
  string exp_date = 3;
  string cvv = 4;
  string cardholder = 5;
  map<string, string> metadata = 6;
}

// Request

message SaveDataRequest {
  oneof data {
    Login login = 1;
    Note note = 2;
    Binary binary = 3;
    Card card = 4;
  }
  string user = 5;
}

message GetDataRequest {
  DataType data_type = 1;
  string user = 2;
  string name = 3;
}

message GetAllDataRequest {
  DataType data_type = 1;
  string user = 2;
}

message RemoveDataRequest {
  DataType data_type = 1;
  string name = 2;
  string user = 3;
}

// Response

message GetDataResponse {
  DataWrapper data = 1;
}

message GetAllDataResponse {
  repeated DataWrapper data = 1;
}

service DataService {
  rpc Save(SaveDataRequest) returns (google.protobuf.Empty);
  rpc Get(GetDataRequest) returns (GetDataResponse);
  rpc GetAll(GetAllDataRequest) returns (GetAllDataResponse);
  rpc Remove(RemoveDataRequest) returns (google.protobuf.Empty);
}

// ---

message DownloadBinaryRequest {
  string name = 1;
}

message FileChunk {
  bytes chunk_data = 1;
  string filename = 2;
  int64 total_size = 3;
  int32 chunk_index = 4;
}

service BinaryService {
  rpc Download(DownloadBinaryRequest) returns (stream FileChunk);
}